--- a/source/manifest.json
+++ b/source/manifest.json
@@ -1,52 +1,42 @@
 {
-	"manifest_version": 2,
-	"name": "Example",
-	"description": "",
-	"version": "1.0.0",
-	"browser_action": {
-		"default_popup": "options/options.html",
-		"default_icon": {
-			"38": "icons/to_38.png",
-			"19": "icons/to_19.png"
-		}
-	},
-	"options_page": "options/options.html",
-	"icons": {
-		"16": "icons/to_16.png",
-		"48": "icons/to_48.png",
-		"128": "icons/to_128.png"
-	},
-	"permissions": [
-		"activeTab"
-	],
-	"file_browser_handlers": [
-	  {
-		"id": "upload",
-		"default_title": "Save to Gallery", // What the button will display
-		"file_filters": [
-		  "filesystem:*.json" // To match all files, use "filesystem:*.*"
-		]
-	  }
-	],
-	"content_scripts": [
-		{
-			"matches": [
-				"<all_urls>"
-			],
-			"all_frames": true,
-			"js": [
-				"lib/jquery.min.js",
-				"lib/linkify.min.js",
-				"lib/linkify-jquery.min.js",
-				"contentscript.js"
-			],
-			"css": [
-				"page.css"
-			],
-            "run_at": "document_end"
-		}
-	],
-	"web_accessible_resources": [
-		"options.html"
-	]
+  "manifest_version": 2,
+  "name": "Example",
+  "description": "",
+  "version": "1.0.0",
+  "browser_action": {
+    "default_popup": "options/options.html",
+    "default_icon": {
+      "38": "icons/to_38.png",
+      "19": "icons/to_19.png"
+    }
+  },
+  "options_page": "options/options.html",
+  "icons": {
+    "16": "icons/to_16.png",
+    "48": "icons/to_48.png",
+    "128": "icons/to_128.png"
+  },
+  "permissions": ["activeTab"],
+  "file_browser_handlers": [
+    {
+      "id": "upload",
+      "default_title": "Save to Gallery",
+      "file_filters": ["filesystem:*.json"]
+    }
+  ],
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "all_frames": true,
+      "js": [
+        "lib/jquery.min.js",
+        "lib/linkify.min.js",
+        "lib/linkify-jquery.min.js",
+        "contentscript.js"
+      ],
+      "css": ["page.css"],
+      "run_at": "document_end"
+    }
+  ],
+  "web_accessible_resources": ["options.html"]
 }
