--- a/source/manifest.json
+++ b/source/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 2,
-  "name": "Example",
+  "name": "Jargon analytics chrome plugin",
   "description": "",
   "version": "1.0.0",
   "browser_action": {
